# step_calc

./: .gitignore  Cargo.toml  output.html  rpn_first_light.html  rpn_sample.html  sample.dot  tmp.txt
artifacts/: output.xml
console_qualifier/: Cargo.toml  color.csv
console_qualifier/src/: color.rs  lib.rs  raw.rs
list_dumper/: Cargo.toml
list_dumper/src/: alignment.rs  column_info.rs  console_dumper.rs  lib.rs  type_descriptor.rs
literal_compressor/: Cargo.toml
parser/: Cargo.toml
parser/src/: infix.rs  infix_notation.rs  lib.rs  rpn.rs  rpn_notation.rs  rpn_token.rs
parser/src/infix/: formatter.rs  parser.rs
parser/src/rpn/: char_cursor.rs  parser.rs  tokenizer.rs
playground/: Cargo.toml  original.dot  wrong.dot
playground/src/: console_color.rs  const_sample.rs  html_writer.rs  infix_html_writer.rs  main.rs  option_parser.rs  parser_sample.rs  rpn_html_writer.rs  test_helper.rs  test_writer.rs
playground/test_artifacts/: full_html.txt  sample.dot  sample.txt  step_output.txt
syntax/: Cargo.toml
syntax/src/: arithmetic_expression.rs  binary_operation.rs  bracket.rs  dot_writer.rs  expression.rs  expression_manipulator.rs  id_dispatcher.rs  lib.rs  number.rs  number_value.rs
type_description/: Cargo.toml
type_description/src/: alignment.rs  descriptor.rs  extractor.rs  lib.rs  presenter.rs  type_descriptor.rs
