[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
once_cell = "*"
dashmap = "*"


[dependencies]
syntax = { path = "../syntax" }
parser = { path = "../parser" }
console_qualifier = { path = "../console_qualifier" }
anyhow = "*"
